--- a/k8s/argo-manifests/kustomize-appset.yaml
+++ b/k8s/argo-manifests/kustomize-appset.yaml
@@ -18,6 +18,10 @@ spec:
     spec:
       project: default
       syncPolicy:
+        automated:
+          prune: true
+          allowEmpty: true
+          selfHeal: true
         syncOptions:
         - Replace=true
       source:
