--- a/k8s/helm/kargo/kargo/Chart.yaml
+++ b/k8s/helm/kargo/kargo/Chart.yaml
@@ -5,4 +5,4 @@ version: 0.1.0
 dependencies:
   - name: "kargo"
     version: 0.3.0
-    repository: "oci://ghcr.io/akuity/kargo-charts/kargo"
+    repository: "oci://ghcr.io/akuity/kargo-charts"
