make gitops repo creds shared across kargo projects

--- a/k8s/helm/kargo/kargo/values.yaml
+++ b/k8s/helm/kargo/kargo/values.yaml
@@ -16,6 +16,11 @@ kargo:
       ingressClassName: nginx
       tls:
         selfSignedCert: false
+  controller:
+    globalCredentials:
+      enabled: true
+      namespaces:
+      - kargo
   webhooksServer:
     tls:
       selfSignedCert: false
