migrate test kargo promotion kargo to overlay pattern

--- a/k8s/base/kargo-project-dev/promotion-policy.yaml
+++ b/k8s/base/kargo-project-dev/promotion-policy.yaml
@@ -1,6 +1,6 @@
 apiVersion: kargo.akuity.io/v1alpha1
 kind: PromotionPolicy
 metadata:
-  name: test-kargo-promotion-dev
-stage: test-kargo-promotion-dev
+  name: dev
+stage: dev
 enableAutoPromotion: true
