--- a/k8s/helm/test/test-kargo-promotion/kargo/kustomization.yaml
+++ b/k8s/helm/test/test-kargo-promotion/kargo/kustomization.yaml
@@ -1,7 +1,42 @@
 kind: Kustomization
-
+namePrefix: test-kargo-promotion-
 resources: 
-- promotion-policy.yaml
-- stage.yaml
-- warehouse.yaml
+- ../../../../base/kargo-project-dev
 - sealed-secret.yaml
+
+patches:
+- target:
+    group: kargo.akuity.io
+    version: v1alpha1
+    kind: PromotionPolicy
+  patch: |-
+    - op: add
+      path: /stage
+      value: test-kargo-promotion-dev
+- target:
+    group: kargo.akuity.io
+    version: v1alpha1
+    kind: Stage
+  patch: |-
+    - op: add
+      path: /spec/subscriptions/warehouse
+      value: test-kargo-promotion-dev
+    - op: add
+      path: /spec/promotionMechanisms/gitRepoUpdates/0/helm
+      value:
+        charts:
+        - chartPath: k8s/helm/test/test-kargo-promotion
+          name: test-kargo-promotion
+          registryURL: https://zbialik.github.io/helm-charts
+- target:
+    group: kargo.akuity.io
+    version: v1alpha1
+    kind: Warehouse
+  patch: |-
+    - op: add
+      path: /spec/subscriptions
+      value:
+      - chart:
+          name: test-kargo-promotion
+          registryURL: https://zbialik.github.io/helm-charts
+          semverConstraint: ^1.0.0 # most-recent stable 1.x.x version (but less than 2.0.0)
