--- a/k8s/argo-manifests/kustomize-appset.yaml
+++ b/k8s/argo-manifests/kustomize-appset.yaml
@@ -16,7 +16,8 @@ spec:
     metadata:
       name: '{{path[3]}}'
       annotations:
-        kargo.akuity.io/authorized-stage: "kargo-homelab:{{path[3]}}-dev"
+        # must match kargo-appset destination.namespace + stage defined in manifests
+        kargo.akuity.io/authorized-stage: "kargo-{{path[3]}}:dev" 
     spec:
       project: default
       syncPolicy:
