--- a/k8s/helm/monitoring/prometheus-adapter/kargo/kustomization.yaml
+++ b/k8s/helm/monitoring/prometheus-adapter/kargo/kustomization.yaml
@@ -1,7 +1,33 @@
 kind: Kustomization
-
 resources: 
-- promotion-policy.yaml
-- stage.yaml
-- warehouse.yaml
+- ../../../../base/kargo-project-dev
 - sealed-secret.yaml
+
+patches:
+- target:
+    group: kargo.akuity.io
+    version: v1alpha1
+    kind: Stage
+  patch: |-
+    - op: add
+      path: /spec/promotionMechanisms/argoCDAppUpdates/0/appName
+      value: prometheus-adapter
+    - op: add
+      path: /spec/promotionMechanisms/gitRepoUpdates/0/helm
+      value:
+        charts:
+        - chartPath: k8s/helm/monitoring/prometheus-adapter
+          name: prometheus-adapter
+          registryURL: https://prometheus-community.github.io/helm-charts
+- target:
+    group: kargo.akuity.io
+    version: v1alpha1
+    kind: Warehouse
+  patch: |-
+    - op: add
+      path: /spec/subscriptions
+      value:
+      - chart:
+          name: prometheus-adapter
+          registryURL: https://prometheus-community.github.io/helm-charts
+          semverConstraint: ^4.0.0 # most-recent stable 4.x.x version (but less than 5.0.0) 
