--- a/k8s/helm/cert-manager/cert-manager/Chart.yaml
+++ b/k8s/helm/cert-manager/cert-manager/Chart.yaml
@@ -4,5 +4,5 @@ type: application
 version: 0.1.0
 dependencies:
   - name: "cert-manager"
-    version: v1.13.3
+    version: 1.13.3
     repository: "https://charts.jetstack.io"
