--- a/.github/workflows/deploy-to-gitops.yml
+++ b/.github/workflows/deploy-to-gitops.yml
@@ -77,10 +77,13 @@ jobs:
           GITHUB_WORKFLOW_URL=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
           COMMIT_MESSAGE="Update manifests from workflow -- $GITHUB_WORKFLOW_URL"
 
+          # Setup Git Config
+          git config --global user.name "$GITHUB_ACTOR"
+          git config --global user.email "$GITHUB_ACTOR@users.noreply.github.com"
+
           # Clone the GitOps repository using the token for authentication
           echo "Cloning GitOps repository..."
-          echo "GITHUB_ACTOR is $GITHUB_ACTOR"
-          git clone https://$GITHUB_ACTOR:${{ secrets.GITOPS_TOKEN }}@${GITOPS_REPO#"https://"} gitops
+          git clone https://${{ secrets.GITOPS_TOKEN }}:x-oauth-basic@${GITOPS_REPO#"https://"} gitops
 
           # Copy the generated manifests to the GitOps repository
           echo "Copying manifests..."
@@ -93,7 +96,7 @@ jobs:
           git commit -m "$COMMIT_MESSAGE"
           
           # Push using the token for authentication
-          git push https://$GITHUB_ACTOR:${{ secrets.GITOPS_TOKEN }}@${GITOPS_REPO#"https://"} HEAD:main
+          git push https://${{ secrets.GITOPS_TOKEN }}:x-oauth-basic@${GITOPS_REPO#"https://"} HEAD:main
         env:
           GITOPS_REPO: https://github.com/zbialik/gitops.git
           GITOPS_TOKEN: ${{ secrets.GITOPS_TOKEN }}
