--- a/.github/workflows/deploy-to-gitops.yml
+++ b/.github/workflows/deploy-to-gitops.yml
@@ -3,7 +3,7 @@ name: Deploy to GitOps Repo
 on:
   push:
     branches:
-      - main
+      - instantiate_gitops_workflow
     paths:
       - 'k8s/helm/*/**'
       # - 'k8s/kustomize/*/**'
