--- a/k8s/argo-manifests/helm-appset.yaml
+++ b/k8s/argo-manifests/helm-appset.yaml
@@ -4,6 +4,8 @@ metadata:
   name: helm-apps
   namespace: argocd
 spec:
+  syncPolicy:
+    preserveResourcesOnDeletion: true
   generators:
   - git:
       repoURL: https://github.com/zbialik/homelab.git
