correct warehouse spec.subscriptions field type

--- a/k8s/kargo-manifests/homelab/overlays/bases/staging/warehouse.yaml
+++ b/k8s/kargo-manifests/homelab/overlays/bases/staging/warehouse.yaml
@@ -4,6 +4,6 @@ metadata:
   name: staging
 spec:
   subscriptions:
-    git:
+  - git:
       repoURL: https://github.com/zbialik/gitops.git
       branch: homelab-staging
