indicate github provider

--- a/k8s/kargo-manifests/homelab/overlays/bases/staging/stage.yaml
+++ b/k8s/kargo-manifests/homelab/overlays/bases/staging/stage.yaml
@@ -8,6 +8,7 @@ spec:
   promotionMechanisms:
     gitRepoUpdates:
     - repoURL: https://github.com/zbialik/gitops.git
-      pullRequest: {}
+      pullRequest: 
+        github: {}
       readBranch: homelab-staging
       writeBranch: homelab
