update kargo pipeline for upstreamStages

--- a/k8s/kargo-manifests/homelab/overlays/bases/staging/stage.yaml
+++ b/k8s/kargo-manifests/homelab/overlays/bases/staging/stage.yaml
@@ -4,7 +4,7 @@ metadata:
   name: staging
 spec:
   subscriptions:
-    warehouse: staging
+    upstreamStages: dev
   promotionMechanisms:
     gitRepoUpdates:
     - repoURL: https://github.com/zbialik/gitops.git
