--- a/k8s/kargo-manifests/homelab/overlays/test-kargo-promotion/kustomization.yaml
+++ b/k8s/kargo-manifests/homelab/overlays/test-kargo-promotion/kustomization.yaml
@@ -2,6 +2,7 @@ kind: Kustomization
 namePrefix: test-kargo-promotion-
 resources: 
 - ../bases/dev
+- ../bases/staging
 
 patches:
 - target:
@@ -16,6 +17,16 @@ patches:
     group: kargo.akuity.io
     version: v1alpha1
     kind: Stage
+    name: staging
+  patch: |-
+    - op: add
+      path: /spec/subscriptions/upstreamStages
+      value: test-kargo-promotion-dev
+- target:
+    group: kargo.akuity.io
+    version: v1alpha1
+    kind: Stage
+    name: dev
   patch: |-
     - op: add
       path: /spec/subscriptions/warehouse
