correct field to array

--- a/k8s/kargo-manifests/homelab/overlays/bases/staging/stage.yaml
+++ b/k8s/kargo-manifests/homelab/overlays/bases/staging/stage.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   subscriptions:
     upstreamStages: 
-      name: dev
+    - name: dev
   promotionMechanisms:
     gitRepoUpdates:
     - repoURL: https://github.com/zbialik/gitops.git
