test using readBranch: homelab for staging

--- a/k8s/kargo-manifests/homelab/overlays/bases/staging/stage.yaml
+++ b/k8s/kargo-manifests/homelab/overlays/bases/staging/stage.yaml
@@ -11,5 +11,5 @@ spec:
     - repoURL: https://github.com/zbialik/gitops.git
       pullRequest: 
         github: {}
-      readBranch: homelab-staging
+      readBranch: homelab
       writeBranch: homelab
