--- a/k8s/kargo-manifests/homelab/overlays/bases/staging/stage.yaml
+++ b/k8s/kargo-manifests/homelab/overlays/bases/staging/stage.yaml
@@ -4,12 +4,9 @@ metadata:
   name: staging
 spec:
   subscriptions:
-    upstreamStages: 
-    - name: dev
+    warehouse: staging
   promotionMechanisms:
     gitRepoUpdates:
     - repoURL: https://github.com/zbialik/gitops.git
-      pullRequest: 
-        github: {}
-      readBranch: homelab
+      readBranch: homelab-staging
       writeBranch: homelab
