--- a/k8s/kargo-manifests/homelab/kustomization.yaml
+++ b/k8s/kargo-manifests/homelab/kustomization.yaml
@@ -2,6 +2,4 @@ kind: Kustomization
 
 resources:
 - sealed-secret.yaml
-- overlays/node-exporter
-- overlays/test-kargo-promotion
-- overlays/bases/staging
+# - test-kargo-promotion
