prep test as-new

--- a/k8s/kargo-manifests/homelab/test-kargo-promotion/analysis-templates.yaml
+++ b/k8s/kargo-manifests/homelab/test-kargo-promotion/analysis-templates.yaml
@@ -18,5 +18,5 @@ spec:
                 image: alpine:latest
                 command:
                 - sleep
-                - "300"
+                - "120" # temp sleep to prevent upgrade until CI finishes generation
               restartPolicy: Never
