delete kargo-appset resources + prep revert to old gitops setup

--- a/k8s/argo-manifests/kustomization.yaml
+++ b/k8s/argo-manifests/kustomization.yaml
@@ -1,6 +1,6 @@
 kind: Kustomization
 namespace: argocd
 
-resources:
-- gitops-appset.yaml
-- kargo-appset.yaml
+resources: []
+# - gitops-appset.yaml
+# - kargo-appset.yaml
