--- a/k8s/apps/cert-manager/generated.yaml
+++ b/k8s/apps/cert-manager/generated.yaml
@@ -5509,6 +5509,8 @@ spec:
           - --leader-election-namespace=kube-system
           - --acme-http01-solver-image=quay.io/jetstack/cert-manager-acmesolver:v1.13.3
           - --max-concurrent-challenges=60
+          - --dns01-recursive-nameservers-only=true
+          - --dns01-recursive-nameservers=8.8.8.8:53,1.1.1.1:53
           ports:
           - containerPort: 9402
             name: http-metrics
